now checker-frame works, but error prone fails