@@ -16,18 +16,19 @@
 
     <properties>
         <error-prone.version>2.14.0</error-prone.version>
-        <checker-framework.version>3.22.1</checker-framework.version>
+        <error-prone.javac.version>9+181-r4173-1</error-prone.javac.version>
+        <checker-framework.version>3.22.2</checker-framework.version>
         <spotbugs.version>4.7.0</spotbugs.version>
-        <spotbugs.plugin.version>4.6.0.2</spotbugs.plugin.version>
+        <spotbugs.plugin.version>4.7.0.0</spotbugs.plugin.version>
     </properties>
 
     <dependencies>
 
-        <dependency>
-            <groupId>tutorial</groupId>
-            <artifactId>config</artifactId>
-            <version>1.0.0-Final</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>tutorial</groupId>-->
+        <!--            <artifactId>config</artifactId>-->
+        <!--            <version>1.0.0-Final</version>-->
+        <!--        </dependency>-->
 
         <!--
         https://github.com/gaul/modernizer-maven-plugin
@@ -49,22 +50,22 @@
         </dependency>
 
         <dependency>
-            <groupId>org.checkerframework</groupId>
-            <artifactId>checker-qual</artifactId>
-            <version>${checker-framework.version}</version>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.checkerframework</groupId>
             <artifactId>checker-qual</artifactId>
             <version>${checker-framework.version}</version>
-            <classifier>sources</classifier>
         </dependency>
+
         <dependency>
-            <groupId>com.github.spotbugs</groupId>
-            <artifactId>spotbugs-annotations</artifactId>
-            <version>RELEASE</version>
-            <scope>provided</scope>
+            <groupId>com.google.errorprone</groupId>
+            <artifactId>javac</artifactId>
+            <version>${error-prone.javac.version}</version>
         </dependency>
 
     </dependencies>
@@ -95,14 +96,14 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.7.0.0</version>
+                <version>${spotbugs.plugin.version}</version>
 
                 <dependencies>
                     <!-- https://mvnrepository.com/artifact/com.github.spotbugs/spotbugs -->
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs</artifactId>
-                        <version>4.7.0</version>
+                        <version>${spotbugs.version}</version>
                         <type>pom</type>
                     </dependency>
                 </dependencies>
@@ -130,135 +131,162 @@
                         </goals>
                     </execution>
                 </executions>
-
-            </plugin>
-
-            <!-- COMPILER PLUGIN GUIDE: https://maven.apache.org/plugins/maven-compiler-plugin/compile-mojo.html -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-
-                <dependencies>
-
-                    <!-- INSTALLATION GUIDE: https://errorprone.info/docs/installation -->
-                    <dependency>
-                        <groupId>com.google.errorprone</groupId>
-                        <artifactId>error_prone_core</artifactId>
-                        <version>${error-prone.version}</version>
-                        <scope>compile</scope>
-                    </dependency>
-
-                    <dependency>
-                        <groupId>org.checkerframework</groupId>
-                        <artifactId>checker</artifactId>
-                        <version>3.22.1</version>
-                    </dependency>
-
-                </dependencies>
-
-                <configuration>
-
-                    <source>${jdk.version}</source>
-                    <target>${jdk.version}</target>
-                    <release>${jdk.version}</release>
-
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <fork>true</fork>
-
-                    <showWarnings>true</showWarnings>
-                    <failOnWarning>false</failOnWarning>
-                    <showDeprecation>true</showDeprecation>
-
-                    <compilerArguments>
-                        <Xmaxerrs>10000</Xmaxerrs>
-                        <Xmaxwarns>10000</Xmaxwarns>
-                    </compilerArguments>
-                    <compilerArgument>-Xlint:all</compilerArgument>
-
-                    <compilerArgs combine.children="append">
-
-                        <!-- -Awarns turns type-checking errors into warnings. -->
-                        <arg>-Awarns</arg>
-
-                        <arg>-parameters</arg>
-                        <arg>-XDcompilePolicy=simple</arg>
-
-                        <!-- FORMATTER GUIDE: https://www.jetbrains.com/help/idea/reformat-and-rearrange-code.html#exclude_part_of_code -->
-                        <!-- @formatter:off -->
-                        <arg>-Xplugin:ErrorProne -XepAllErrorsAsWarnings -Xep:UnusedMethod:OFF -Xep:JavaTimeDefaultTimeZone:OFF -Xep:ObjectEqualsForPrimitives:OFF</arg>
-                        <!-- @formatter:on -->
-
-                        <!-- https://checkerframework.org/manual/#maven -->
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                    </compilerArgs>
-
-                    <!-- error-prone issues -->
-                    <!-- https://github.com/andyglick/java-errorprone-compiler-demo-->
-                    <!--https://github.com/google/guava/blob/master/pom.xml-->
-                    <!-- https://github.com/codylerum/errorprone_java16/blob/master/pom.xml -->
-                    <!-- https://github.com/google/error-prone/issues/1242-->
-
-                    <!--
-                    If and when we want to add annotation processors: add them here
-                    If 'annotationProcessorPaths' is set, processors will no longer be
-                    discovered on the regular -classpath; see also 'Using Error Prone
-                    together with other annotation processors' below.
-                    -->
-
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>com.google.errorprone</groupId>
-                            <artifactId>error_prone_core</artifactId>
-                            <version>${error-prone.version}</version>
-                        </path>
-
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-
-                        <!-- To compile without using the Checker Framework, pass -P !checkerframework on the Maven command line.-->
-                        <path>
-                            <groupId>org.checkerframework</groupId>
-                            <artifactId>checker</artifactId>
-                            <version>${checker-framework.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
-
-                    <annotationProcessors>
-                        <annotationProcessor>
-                            org.checkerframework.checker.nullness.NullnessChecker
-                        </annotationProcessor>
-                        <annotationProcessor>
-                            org.checkerframework.checker.interning.InterningChecker
-                        </annotationProcessor>
-                        <annotationProcessor>
-                            org.checkerframework.checker.fenum.FenumChecker
-                        </annotationProcessor>
-                        <annotationProcessor>
-                            org.checkerframework.checker.formatter.FormatterChecker
-                        </annotationProcessor>
-
-                        <!-- this is important, add lombok processor to the processors list -->
-                        <annotationProcessor>
-                            lombok.launch.AnnotationProcessorHider$AnnotationProcessor
-                        </annotationProcessor>
-                    </annotationProcessors>
-                </configuration>
             </plugin>
 
         </plugins>
-
     </build>
+
+
+    <profiles>
+        <profile>
+            <id>checkerframework</id>
+            <activation>
+                <jdk>[1.8,)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.10.1</version>
+                        <configuration>
+                            <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
+                            <compilerArguments>
+                                <Xmaxerrs>10000</Xmaxerrs>
+                                <Xmaxwarns>10000</Xmaxwarns>
+                            </compilerArguments>
+
+                            <annotationProcessorPaths>
+
+                                <path>
+                                    <groupId>org.checkerframework</groupId>
+                                    <artifactId>checker</artifactId>
+                                    <version>${checker-framework.version}</version>
+                                </path>
+
+                                <path>
+                                    <groupId>com.google.errorprone</groupId>
+                                    <artifactId>error_prone_core</artifactId>
+                                    <version>${error-prone.version}</version>
+                                </path>
+
+                                <path>
+                                    <groupId>org.projectlombok</groupId>
+                                    <artifactId>lombok</artifactId>
+                                    <version>${lombok.version}</version>
+                                </path>
+
+                            </annotationProcessorPaths>
+
+                            <annotationProcessors>
+
+                                <!-- Add all the checkers you want to enable here -->
+                                <annotationProcessor>
+                                    org.checkerframework.checker.nullness.NullnessChecker
+                                </annotationProcessor>
+
+                                <annotationProcessor>
+                                    org.checkerframework.checker.interning.InterningChecker
+                                </annotationProcessor>
+
+                                <annotationProcessor>
+                                    org.checkerframework.checker.fenum.FenumChecker
+                                </annotationProcessor>
+
+                                <annotationProcessor>
+                                    org.checkerframework.checker.formatter.FormatterChecker
+                                </annotationProcessor>
+
+                                <!-- this is important, add lombok processor to the processors list -->
+                                <annotationProcessor>
+                                    lombok.launch.AnnotationProcessorHider$AnnotationProcessor
+                                </annotationProcessor>
+
+                            </annotationProcessors>
+
+                            <compilerArgs>
+                                <!-- -Awarns turns type-checking errors into warnings. -->
+                                <!-- <arg>-Awarns</arg> -->
+
+                                <!-- FORMATTER GUIDE: https://www.jetbrains.com/help/idea/reformat-and-rearrange-code.html#exclude_part_of_code -->
+                                <!-- @formatter:off -->
+                                <arg>-parameters</arg>-->
+                                <arg>-XDcompilePolicy=simple</arg>-->
+                                <arg>-Xplugin:ErrorProne -XepAllErrorsAsWarnings -Xep:UnusedMethod:OFF -Xep:JavaTimeDefaultTimeZone:OFF -Xep:ObjectEqualsForPrimitives:OFF</arg>
+                                <!-- @formatter:on -->
+
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+            <dependencies>
+                <dependency>
+                    <groupId>org.checkerframework</groupId>
+                    <artifactId>checker</artifactId>
+                    <version>${checker-framework.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>checkerframework-jdk8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
+            <properties>
+                <javac.version>9+181-r4173-1</javac.version>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>com.google.errorprone</groupId>
+                    <artifactId>javac</artifactId>
+                    <version>9+181-r4173-1</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.10.1</version>
+                        <configuration>
+                            <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
+                            <source>1.8</source>
+                            <target>1.8</target>
+                            <compilerArgs combine.children="append">
+                                <arg>
+                                    -J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar
+                                </arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>checkerframework-jdk9orlater</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.10.1</version>
+                        <configuration>
+                            <fork>true</fork>
+                            <release>17</release>
+                            <compilerArgs combine.children="append">
+                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
